--- a/frontend/app/templates/manga/index.hbs
+++ b/frontend/app/templates/manga/index.hbs
@@ -106,14 +106,13 @@
 
   <!-- Right Side Start -->
   <div class="community-column">
-    {{!--
     {{#if roundedBayesianRating}}
       <div class="hb-score">
         <h3>Hummingbird Score: <span class="highlight">{{roundedBayesianRating}}</span></h3>
       </div>
     {{/if}}
     <div class="histogram">
-      {{community-rating communityRatings}}
+      {{community-rating model.communityRatings}}
       <div class="rating-legend">
         <span class="lowest-rating">
           <i class="fa fa-star-half-o"></i>
@@ -129,6 +128,5 @@
         </span>
       </div>
     </div>
-    --}}
   </div>
 </div>
