--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -127,7 +127,7 @@
 
 
                                                   <!--======= VIEW ONLINE Link =====-->
-                                                  <td valign="middle" align="left" width="180" height="15" bgcolor="#f8f8f8" class="mailingOptions" style="border-collapse: collapse;color: #cccccc;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: lighter;padding: 0;margin: 0;text-align: left;letter-spacing: 0;"><a href="http://hummingbird.me/newsletters/july.html" target="_blank" class="mailingOptionsLink" style="text-decoration: none;color: #999999;outline: none;font-weight: lighter;"> </a></td>
+                                                  <td valign="middle" align="left" width="180" height="15" bgcolor="#f8f8f8" class="mailingOptions" style="border-collapse: collapse;color: #cccccc;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: lighter;padding: 0;margin: 0;text-align: left;letter-spacing: 0;"><a href="https://hummingbird.me/newsletters/july.html" target="_blank" class="mailingOptionsLink" style="text-decoration: none;color: #999999;outline: none;font-weight: lighter;"> </a></td>
                                                   <!--================ end of view online section ============-->
 
 
@@ -189,7 +189,7 @@
                                                   <td valign="middle" align="center" height="12" bgcolor="#ffffff" style="font-size: 0;line-height: 0;border-collapse: collapse;">&nbsp;</td>
                 </tr>
                                                 <tr>
-                                                      <td valign="middle" align="center" width="600" height="15" bgcolor="#ffffff" class="menu" style="border-collapse: collapse;color: #dddddd;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: bold;padding: 0;margin: 0;text-align: center;line-height: 130%;letter-spacing: 0;"><a href="http://hummingbird.me/" target="_blank" class="menuLink" style="text-decoration: none;color: #999999;outline: none;">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://hummingbird.me/dashboard" target="_blank" class="menuLink" style="text-decoration: none;color: #999999;outline: none;">Dashboard</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://hummingbird.me/anime" target="_blank" class="menuLink" style="text-decoration: none;color: #999999;outline: none;">Explore</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://hummingbird.me/community/" target="_blank" class="menuLink" style="text-decoration: none;color: #999999;outline: none;">Community</a></td>
+                                                      <td valign="middle" align="center" width="600" height="15" bgcolor="#ffffff" class="menu" style="border-collapse: collapse;color: #dddddd;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: bold;padding: 0;margin: 0;text-align: center;line-height: 130%;letter-spacing: 0;"><a href="https://hummingbird.me" target="_blank" class="menuLink" style="text-decoration: none;color: #999999;outline: none;">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://hummingbird.me/anime" target="_blank" class="menuLink" style="text-decoration: none;color: #999999;outline: none;">Explore</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://forums.hummingbird.me" target="_blank" class="menuLink" style="text-decoration: none;color: #999999;outline: none;">Community</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://hummingbird.me/apps" target="_blank" class="menuLink" style="text-decoration: none;color: #999999;outline: none;">Apps</a></td>
                                                 </tr>
                                                 <tr>
                                                   <td valign="middle" align="center" height="11" bgcolor="#ffffff" style="font-size: 0;line-height: 0;border-collapse: collapse;">&nbsp;</td>
@@ -255,7 +255,7 @@
                           <tr>
                                 <!--================== Intro Text SECTION =============-->
                                     <td valign="middle" align="center" height="10" bgcolor="#f8f8f8" class="sectionRegularInfoTextTD" style="border-collapse: collapse;color: #777777;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 15px;font-weight: lighter;padding: 0;margin: 0;text-align: left;line-height: 165%;letter-spacing: 0;">
-                                    We're <i>really</i> excited to have you join our public beta! All that remains is confirming your account! <%= link_to 'Confirm your account', confirmation_url(@resource, :confirmation_token => @token) %> and start enjoying all that Hummingbird has to offer because dammit, you deserve it.</td>
+                                    We're <i>really</i> excited to have you join us! All that remains is confirming your account! <%= link_to 'Confirm your account', confirmation_url(@resource, :confirmation_token => @token) %> and start enjoying all that Hummingbird has to offer because dammit, you deserve it.</td>
                                 <!--================== End of the section ================-->
 
                               </tr>
@@ -343,19 +343,11 @@
                                                                     <!--============= Icon ===========-->
                                                                         <td valign="top" align="center" bgcolor="#f8f8f8" class="pictureAlternativeTextTD" style="border-collapse: collapse;color: #bbbbbb;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 8px;padding: 0;margin: 0;text-align: center;line-height: 1px;"><img class="removeImage" src="https://d2q0qd5iz04n9u.cloudfront.net/_ssl/proxy.php/http/gallery.mailchimp.com/14592d1effa224168c1609dbc/images/iconHome.jpg" style="display:block;" alt="" border="0" align="top" hspace="0" vspace="0" width="30" height="30"></td>
                                                                        <!--============= Link ============-->
-                                                                        <td valign="top" align="left" width="230" bgcolor="#f8f8f8" class="footerInfoTDSupport2" style="border-collapse: collapse;color: #666666;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: lighter;padding: 0;margin: 0;text-align: left;line-height: 165%;letter-spacing: 0;"><a href="http://www.hummingbird.me" target="_blank" class="footerInfoTDLink" style="text-decoration: none;color: #888888;outline: none;border-bottom: 1px dotted #f3730b;font-weight: bold;">www.hummingbird.me</a></td>
+                                                                        <td valign="top" align="left" width="230" bgcolor="#f8f8f8" class="footerInfoTDSupport2" style="border-collapse: collapse;color: #666666;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: lighter;padding: 0;margin: 0;text-align: left;line-height: 165%;letter-spacing: 0;"><a href="https://hummingbird.me" target="_blank" class="footerInfoTDLink" style="text-decoration: none;color: #888888;outline: none;border-bottom: 1px dotted #f3730b;font-weight: bold;">hummingbird.me</a></td>
                                                                   </tr>
                                                             </table>
                                                              <!--============================================================ End of Home  ========-->
                                                              <!--========================================= Email Stuff =====-->
-                                                             <table align="center" width="260" cellpadding="0" cellspacing="0" bgcolor="#f8f8f8" border="0" class="contactJpg">
-                                                                  <tr>
-                                                                    <!--============= Icon ===========-->
-                                                                        <td valign="top" align="center" bgcolor="#f8f8f8" class="pictureAlternativeTextTD" style="border-collapse: collapse;color: #bbbbbb;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 8px;padding: 0;margin: 0;text-align: center;line-height: 1px;"><img class="removeImage" src="https://d2q0qd5iz04n9u.cloudfront.net/_ssl/proxy.php/http/gallery.mailchimp.com/14592d1effa224168c1609dbc/images/iconEmail.jpg" style="display:block;" alt="" border="0" align="top" hspace="0" vspace="0" width="30" height="30"></td>
-                                                                        <!--============= Link ============-->
-                                                                        <td valign="top" align="left" width="230" bgcolor="#f8f8f8" class="footerInfoTDSupport2" style="border-collapse: collapse;color: #666666;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: lighter;padding: 0;margin: 0;text-align: left;line-height: 165%;letter-spacing: 0;"><a href="#" target="_blank" class="footerInfoTDLink" style="text-decoration: none;color: #888888;outline: none;border-bottom: 1px dotted #f3730b;font-weight: bold;">josh@hummingbird.me</a></td>
-                                                                  </tr>
-                                                            </table>
                                                              <table align="center" width="260" cellpadding="0" cellspacing="0" bgcolor="#f8f8f8" border="0" class="contactJpg">
                                                                   <tr>
                                                                     <!--============= Icon ===========-->
@@ -381,7 +373,7 @@
                     <table align="center" cellpadding="0" cellspacing="0" bgcolor="#f8f8f8" border="0">
                                                                   <tr>
                                                                     <!--==================================== Unsubscribe ====-->
-                                                                    <td valign="top" align="center" height="20" bgcolor="#f8f8f8" class="footerInfoTDSupport" style="border-collapse: collapse;color: #666666;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: lighter;padding: 0;margin: 0;text-align: left;line-height: 165%;letter-spacing: 0;">You are receiving this because you've signed up for the Hummingbird Beta. You have great taste.</td>
+                                                                    <td valign="top" align="center" height="20" bgcolor="#f8f8f8" class="footerInfoTDSupport" style="border-collapse: collapse;color: #666666;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: lighter;padding: 0;margin: 0;text-align: left;line-height: 165%;letter-spacing: 0;">You are receiving this because you've signed up for Hummingbird. You have great taste.</td>
                                                                     <!--====================================================== End of the section ================-->
                                                                   </tr>
                                                             </table>
@@ -411,7 +403,7 @@
                                           <table align="center" width="50" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8">
                                                 <tr>
                                                   <!--=============== Facebook ==========-->
-                                                      <td valign="top" align="center" height="15" bgcolor="#f8f8f8" style="border-collapse: collapse;"><a href="https://www.facebook.com/pages/Hummingbird/460188747373182" target="_blank" class="buttonsAndImagesLink" style="text-decoration: none;color: #bbbbbb;outline: none;font-weight: lighter;"><img src="https://d2q0qd5iz04n9u.cloudfront.net/_ssl/proxy.php/http/gallery.mailchimp.com/14592d1effa224168c1609dbc/images/facebookSocial.jpg" style="display:block;" alt="" border="0" align="top" hspace="0" vspace="0" width="45" height="50"></a></td>
+                                                      <td valign="top" align="center" height="15" bgcolor="#f8f8f8" style="border-collapse: collapse;"><a href="https://www.facebook.com/hummingbird.me" target="_blank" class="buttonsAndImagesLink" style="text-decoration: none;color: #bbbbbb;outline: none;font-weight: lighter;"><img src="https://d2q0qd5iz04n9u.cloudfront.net/_ssl/proxy.php/http/gallery.mailchimp.com/14592d1effa224168c1609dbc/images/facebookSocial.jpg" style="display:block;" alt="" border="0" align="top" hspace="0" vspace="0" width="45" height="50"></a></td>
                                                       <!--=============== End of facebook section ========-->
                                                       <!--===============  Twitter ==========-->
                                                       <td valign="top" align="center" height="15" bgcolor="#f8f8f8" style="border-collapse: collapse;"><a href="https://twitter.com/hummingbird_me" target="_blank" class="buttonsAndImagesLink" style="text-decoration: none;color: #bbbbbb;outline: none;font-weight: lighter;"><img src="https://d2q0qd5iz04n9u.cloudfront.net/_ssl/proxy.php/http/gallery.mailchimp.com/14592d1effa224168c1609dbc/images/twitterSocial.jpg" style="display:block;" alt="" border="0" align="top" hspace="0" vspace="0" width="45" height="50"></a></td>
@@ -447,7 +439,7 @@
                                             </tr>
                                                 <tr>
                                                       <!--=============== Copyright ================-->
-                                                      <td valign="middle" align="center" height="10" bgcolor="#f3730b" class="copyrightTD" style="border-collapse: collapse;color: #ffffff;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: bold;padding: 0;margin: 0;text-align: center;line-height: 165%;letter-spacing: 0;">&copy; Copyright Hummingbird 2015 (This makes us look super official!)</td>
+                                                      <td valign="middle" align="center" height="10" bgcolor="#f3730b" class="copyrightTD" style="border-collapse: collapse;color: #ffffff;font-family: Arial, Tahoma, Verdana, sans-serif;font-size: 13px;font-weight: bold;padding: 0;margin: 0;text-align: center;line-height: 165%;letter-spacing: 0;">&copy; 2015 Hummingbird Media, Inc.</td>
                                                       <!--================== End of the section ================--> 
                                             </tr>
                                           </table>
